--- a/style.css
+++ b/style.css
@@ -62,6 +62,47 @@ h3 {
     border-radius: 10px;
 }
 
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+button {
+        background-color: #87975c;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+}
+
+button:hover {
+    background-color: #a8bb76;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+#dynamicText {
+    padding: 40px;
+    width: 60%;
+    margin: 0 auto;
+    height: 100vh;
+}
+
+#dynamicText h4 {
+    padding: 40px;
+    width: 60%;
+    margin: 0 auto;
+    color:#2c2b2d;
+}
 h4{
     font-weight: 700;
     font-weight: bold;
