--- a/style.css
+++ b/style.css
@@ -28,10 +28,22 @@ h3 {
     color: #43463f;
 }
 
+.catamarcaImage{
+    width: 100%;
+    height: 40vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    border-radius: 10px;
+}
+
 .imgcontainerred {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    gap: 10px;
+    flex-wrap: wrap;
     align-items: center;
     padding: 50px;
     background-color: #ef4646;
@@ -56,8 +68,8 @@ h3 {
 }
 
 .imgproducto{
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    height: auto;
     border: 2px solid #eae0cc;
     border-radius: 10px;
 }
